gcc/testsuite/objc.dg/member-1.m
void foo()
{
  struct A a;  /* { dg-error "storage size" } */
  a.i;
}
